--- a/src/package.json
+++ b/src/package.json
@@ -8,9 +8,9 @@
         "unitTest": "grunt unitTest",
         "coverage": "grunt coverage",
         "start": "node index.js",
-        "startXLSACCOUNTAPIServer": "forever start index.js",
-        "stopXLSACCOUNTAPIServer": "forever stop index.js",
-        "restartXLSACCOUNTAPIServer": "forever restart index.js",
+        "startServer": "forever start index.js",
+        "stopServer": "forever stop index.js",
+        "restartServer": "forever restart index.js",
         "xtest": "./node_modules/.bin/mocha --recursive -R xunit test/ > test-reports.xml",
         "coverageRpt": "./node_modules/.bin/istanbul report cobertura --root coverage --dir coverage",
         "jutest": "./node_modules/.bin/mocha \"test/unit/\" --reporter mocha-junit-reporter --timeout 30000",
@@ -21,52 +21,57 @@
         "node": "10.15.0"
     },
     "dependencies": {
+        "async": "2.6.1",
+        "coffee-script": "^1.12.7",
         "express": "4.16.4",
-        "kraken-js": "2.2.0",
-        "nconf": "0.10.0",
-        "log4js": "3.0.6",
         "forever": "0.15.3",
         "hashmap": "2.3.0",
-        "stack-trace": "0.0.10",
-        "mocha-junit-reporter": "1.18.0",
-        "q": "1.5.1",
-        "node-gyp": "3.8.0",
         "http-status": "1.3.1",
         "jsonschema": "1.2.4",
-        "async": "2.6.1",
+        "kraken-js": "2.2.0",
+        "lodash": "4.17.11",
+        "log4js": "3.0.6",
+        "mocha-junit-reporter": "1.18.0",
         "moment": "2.23.0",
         "mysql": "2.13.0",
-        "object-unset": "1.0.1",
+        "nconf": "0.10.0",
         "newman": "4.3.1",
-        "lodash": "4.17.11",
+        "node-gyp": "3.8.0",
+        "object-unset": "1.0.1",
+        "q": "1.5.1",
+        "stack-trace": "0.0.10",
         "validator": "10.10.0"
     },
     "devDependencies": {
-        "babel-cli": "6.26.0",
-        "chai": "4.2.0",
-        "chai-as-promised": "^7.1.1",
-        "expect.js": "0.3.1",
-        "grunt": "1.0.3",
-        "grunt-cli": "1.3.2",
+        "@octopusdeploy/grunt-octo": "0.0.49",
+        "babel": "6.5.2",
+        "chai": "3.5.0",
+        "expect.js": "0.2.0",
+        "grunt": "^1.0.3",
+        "grunt-bump": "^0.8.0",
+        "grunt-bumpup": "^0.6.3",
+        "grunt-cli": "^1.2.0",
         "grunt-config-dir": "0.3.2",
-        "grunt-contrib-clean": "2.0.0",
-        "grunt-contrib-jshint": "2.0.0",
-        "grunt-contrib-less": "2.0.0",
-        "grunt-contrib-requirejs": "1.0.0",
-        "grunt-copy-to": "0.0.12",
+        "grunt-contrib-clean": "^0.5.0",
+        "grunt-contrib-jshint": "0.10.0",
+        "grunt-contrib-less": "0.9.0",
+        "grunt-contrib-requirejs": "0.4.4",
+        "grunt-copy-to": "0.0.10",
         "grunt-dustjs": "1.4.0",
-        "grunt-localizr": "0.2.4",
-        "grunt-mocha-cli": "4.0.0",
-        "grunt-mocha-istanbul": "5.0.2",
-        "grunt-mocha-test": "0.13.3",
-        "istanbul": "v1.1.0-alpha.1",
-        "mocha": "5.2.0",
+        "grunt-localizr": "0.1.4",
+        "grunt-mocha-cli": "1.14.0",
+        "grunt-mocha-istanbul": "4.0.2",
+        "grunt-mocha-test": "0.12.7",
+        "istanbul": "0.4.3",
+        "log4js-test-appender": "^0.1.1",
+        "mocha": "2.2.5",
         "mocha-jshint": "2.3.1",
-        "should": "13.2.3",
-        "sinon": "7.2.2",
-        "sinon-chai": "3.3.0",
-        "superagent": "4.1.0",
-        "supertest": "3.3.0"
+        "should": "8.3.1",
+        "sinon": "1.14.1",
+        "sinon-as-promised": "4.0.0",
+        "sinon-chai": "2.8.0",
+        "superagent": "0.15.7",
+        "supertest": "0.9.2"
     },
     "generator-kraken": {
         "version": "1.1.1",
