--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,11 +2,11 @@
     "port": 8001,
 
     "dbConfig": {
-        "host": "192.168.77.7",
+        "host": "*****",
         "port": 3306,
-        "user": "auth_admin",
-        "password": "YSTyH8bPdNcxjGlgVVc99Q==",
-        "database": "AUTH_RTXBLDEV"
+        "user": "******",
+        "password": "*********",
+        "database": "*********"
     },
     "loggerConfig": {
         "appenders": {
